typescript/checker/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsUndefined.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            5,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsUndefined.ts:1:5
  |
1 | var x: typeof undefined;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            478,
        ),
        hi: BytePos(
            479,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsUndefined.ts:25:5
   |
25 | var a: boolean;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            494,
        ),
        hi: BytePos(
            495,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsUndefined.ts:26:5
   |
26 | var b: number;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            509,
        ),
        hi: BytePos(
            510,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsUndefined.ts:27:5
   |
27 | var c: string;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            524,
        ),
        hi: BytePos(
            525,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsUndefined.ts:28:5
   |
28 | var d: void;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            537,
        ),
        hi: BytePos(
            538,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsUndefined.ts:29:5
   |
29 | var e: E;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            547,
        ),
        hi: BytePos(
            548,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsUndefined.ts:30:5
   |
30 | var f: {};
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            558,
        ),
        hi: BytePos(
            559,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithOneOperandIsUndefined.ts:31:5
   |
31 | var g: string[];
   |     ^

